# demo_render

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GUI/: editor.cpp  editor.h
include/: const.h  drawer.h  geometry.h  include_all.h  matrix.h  model.h  shader.h  shaderGlobal.h  tgaimage.h  transform.h
src/: drawer.cpp  geometry.cpp  matrix.cpp  model.cpp  shader.cpp  shaderGlobal.cpp  tgaimage.cpp  transform.cpp
